feinstaubr-web/kubernetes/kubernetes-feinstaubr-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: feinstaubr
  labels:
    app: feinstaubr
spec:
  template:
    metadata:
      labels:
        app: feinstaubr
    spec:
      containers:
        - name: feinstaubr
          image: gcr.io/feinstaubr/feinstaubr-web:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping.html
            initialDelaySeconds: 15
            periodSeconds: 20
          # The following environment variables will contain the database host,
          # user and password to connect to the PostgreSQL instance.
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=feinstaubr:europe-west3:feinstaubr-db=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
        # [END proxy_container]
      # [START volumes]
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
      # [END volumes]
