feinstaubr-web/kubernetes/kubernetes-feinstaubr-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: feinstaubr-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: feinstaubr-ip
  labels:
    app: feinstaubr
spec:
  backend:
    serviceName: feinstaubr
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: feinstaubr
  name: feinstaubr
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: feinstaubr
